# QFD-Universe

./: .gitignore  ALL_LEAN_PROOFS.md  ALL_SCRIPTS.md  LICENSE  LLM_CONTEXT.md  Makefile  README.md  THEORY.md  project_map.txt  pyproject.toml  qfd_proof.py  requirements.txt  sync_from_internal.sh  sync_to_internal.sh
.github/workflows/: ci.yml  validate.yml
analysis/nuclear/data/: family_params_stable.json
analysis/nuclear/scripts/: analyze_all_decay_transitions.py  validate_fission_pythagorean.py
analysis/reports/: FINAL_VALIDATION_REPORT.md
analysis/results/: integer_ladder_results.json
analysis/scripts/: analyze_all_decay_transitions.py  compare_models.py  integer_ladder_test.py  run_all_validations.py  validate_g2_corrected.py  validate_proton_engine.py
docs/: REPLICATION.md  files.json  generate_index.py  index.html  lean_proofs.html  llms.txt  raw_index.md  simple.html  sitemap.xml  urls.txt  urls_plain.txt
docs/visualizations/: README.md
formalization/: lake-manifest.json
formalization/QFD/: GoldenLoop.lean  Neutrino_Chirality.lean  PROOF_INDEX.md
formalization/QFD/Classical/: Conservation.lean
formalization/QFD/GA/: Cl33.lean  Cl33Instances.lean
formalization/QFD/Gravity/: GeometricCoupling.lean
formalization/QFD/Lepton/: AnomalousMoment.lean  VortexStability.lean  VortexStability_v3.lean
formalization/QFD/Nuclear/: AlphaNDerivation.lean  AlphaNDerivation_Complete.lean  BetaNGammaEDerivation.lean  BetaNGammaEDerivation_Complete.lean  FissionTopology.lean  ProtonBridge_Derivation.lean  ProtonBridge_Geometry.lean  QuarticStiffness.lean  SymmetryEnergyMinimization.lean  WellDepth.lean
formalization/QFD/Physics/: Postulates.lean
qfd/: __init__.py
simulation/scripts/: derive_beta_from_alpha.py  verify_golden_loop.py
simulation/src/: shared_constants.py
visualizations/: README.md
visualizations/field-theory/: Neutrino.html
(+4 files in other folders)
